  * The `OSType` flag is now taken into account
- Amends Default Loader Scan for APFS Support Volumes
  * APFS Recovery Volumes are handled as Mac Recovery Tools
  * These are now added to the DontScanVolume list by default
  * APFS `Update` and `VM` volumes are similarly added
- Amends Scan for `.VolumeIcons` and `VolumeBadges`
  * Volumes in the `DontScanVolume` list are now skipped


0.13.2.AN (08 Feb 2022):
-----------------------
- Multiple Misc Stability Fixes
  * Major refactoring and restructuring for improved stability
  * Also applied to filesystem drivers
- Adds `SupplyUEFI` Feature
  * Adds an implementation of the `CreateEventEx` feature to EFI 1.x units
  * Additionally, the EFI Revision is modified to present as UEFI 2.3
  * This allows the use of UEFI 2.x tools and drivers on Legacy EFI 1.x units in many cases
  * This is particularly the case on Legacy Macs, which already have amended EFI 1.x implementations
  * This functionality can be disabled by setting the `decline_uefiemulate` token
  * As an aside, the `RuntimeServices` table is now also amended in `AmendSysTable`
- Adds `SilentBoot` Feature
  * RefindPlus inherited a mode where a default selection was run after an instant timeout
  * A shortcut key for a loader could also be pressed to run that particular loader instead
  * This mode is activated by setting the `timeout` config token to `-1`
  * However, the RefindPlus screen was briefly loaded before the target option was run
    - This created an unwanted screen flash and also removed the BGRT logo
  * The default selection is now run without showing the screen at all instead (Based on an upstream update)
  * The mode is now truly silent as there is no video output unless overriden (BGRT logos are maintained)
    - Override is initiated by holding down the `ESC` key immediately after starting RefindPlus
    - Shortcut keys can also be pressed
      * In such cases, the loader associated with the key will be run instead of the default